# zalo-ai-2023

./: README.md  pyproject.toml
notebooks/: musicgen.ipynb
